--- a/main_system/templates/operation/admin_product_list.html
+++ b/main_system/templates/operation/admin_product_list.html
@@ -24,7 +24,7 @@
                 <td>{{ product.name }}</td>
                 <td><img src="{{ product.picture.url }}" alt="{{ product.name }}" width="50"></td>
                 <td>{{ product.category }}</td>
-                <td>${{ product.price }}</td>
+                <td>£{{ product.price }}</td>
                 <td>{{ product.stock }}</td>
                 <td><span class="badge bg-{% if product.status == 'active' %}success{% else %}danger{% endif %}">{{ product.status }}</span></td>
                 <td class="d-flex gap-2">
