--- a/main_system/templates/layout.html
+++ b/main_system/templates/layout.html
@@ -117,8 +117,18 @@
         <div class="container">
             <div class="row">
                 <div class="col-md-4">
-                    <h5>About Unicraft</h5>
-                    <p>We are committed to providing the highest quality handicrafts, allowing every customer to enjoy a unique shopping experience.</p>
+                    <h5>Subscribe now</h5>
+                    <p class="text-muted">Mauris augue nisi, cursus manuisque molestie turpis ut semper lucid</p>
+                    <form action="/subscribe/" method="post" class="mt-3">
+                        {% csrf_token %}
+                        <div class="mb-3">
+                            <input type="text" class="form-control" name="name" placeholder="Name" required>
+                        </div>
+                        <div class="mb-3">
+                            <input type="email" class="form-control" name="email" placeholder="Email" required>
+                        </div>
+                        <button type="submit" class="btn btn-primary">Subscribe</button>
+                    </form>
                 </div>
                 <div class="col-md-4">
                     <h5>Quick Links</h5>
