--- a/main_system/templates/layout.html
+++ b/main_system/templates/layout.html
@@ -118,7 +118,7 @@
             <div class="row">
                 <div class="col-md-4">
                     <h5>Subscribe now</h5>
-                    <p class="text-muted">Mauris augue nisi, cursus manuisque molestie turpis ut semper lucid</p>
+                    <p class="text-muted"></p>
                     <form action="/subscribe/" method="post" class="mt-3">
                         {% csrf_token %}
                         <div class="mb-3">
