修改了admin里面的dashboard

--- a/main_system/templates/products/product_page.html
+++ b/main_system/templates/products/product_page.html
@@ -138,7 +138,7 @@
                     <ul class="pagination justify-content-center">
                         {% if products.has_previous %}
                         <li class="page-item">
-                            <a class="page-link" href="?page={{ products.previous_page_number }}" aria-label="Previous">
+                            <a class="page-link" href="?{% for key, value in request.GET.items %}{% if key != 'page' %}{% if key == 'category' %}{% for cat in selected_categories %}category={{ cat }}&{% endfor %}{% else %}{{ key }}={{ value }}&{% endif %}{% endif %}{% endfor %}page={{ products.previous_page_number }}" aria-label="Previous">
                                 <span aria-hidden="true">&laquo;</span>
                             </a>
                         </li>
@@ -146,13 +146,13 @@
 
                         {% for num in products.paginator.page_range %}
                         <li class="page-item {% if products.number == num %}active{% endif %}">
-                            <a class="page-link" href="?page={{ num }}">{{ num }}</a>
+                            <a class="page-link" href="?{% for key, value in request.GET.items %}{% if key != 'page' %}{% if key == 'category' %}{% for cat in selected_categories %}category={{ cat }}&{% endfor %}{% else %}{{ key }}={{ value }}&{% endif %}{% endif %}{% endfor %}page={{ num }}">{{ num }}</a>
                         </li>
                         {% endfor %}
 
                         {% if products.has_next %}
                         <li class="page-item">
-                            <a class="page-link" href="?page={{ products.next_page_number }}" aria-label="Next">
+                            <a class="page-link" href="?{% for key, value in request.GET.items %}{% if key != 'page' %}{% if key == 'category' %}{% for cat in selected_categories %}category={{ cat }}&{% endfor %}{% else %}{{ key }}={{ value }}&{% endif %}{% endif %}{% endfor %}page={{ products.next_page_number }}" aria-label="Next">
                                 <span aria-hidden="true">&raquo;</span>
                             </a>
                         </li>
